--- a/longitudinal_register/templates/patients/list.html
+++ b/longitudinal_register/templates/patients/list.html
@@ -1,4 +1,15 @@
 <%inherit file="/base/list.html"/>
+<%block name="table_content">
+% for patient in patients:
+<tr>
+
+  <td><a href="${request.route_path('patient_dashboard_page', health_id=patient.health_id)}">${patient.health_id}</a></td>
+
+  <td>${patient.surname} ${patient.other_names}</td>
+  <td>${patient.location}</td>
+</tr>
+% endfor
+</%block>
 <%block name="list_actions">
   <a href="${request.route_path('patient_add_page')}"> Enter New Patient </a>
 </%block>
