--- a/longitudinal_register/templates/forms/add.html
+++ b/longitudinal_register/templates/forms/add.html
@@ -40,7 +40,7 @@
 
     <div class="container-fluid">
        <!-- <form id="person_form" action="/person/save" method="post"> -->
-        ${form.begin(request.route_url('concept_add_view'), id='concept_form')}
+        ${form.begin(request.route_url('form_save'), id='form_add_form')}
           ${form.csrf_token()}
         <div class="row-fluid">
             <div class="span6">
