--- a/longitudinal_register/templates/base/index.html
+++ b/longitudinal_register/templates/base/index.html
@@ -17,9 +17,7 @@
         <link type="text/css" rel="stylesheet" href="${request.static_url('longitudinal_register:static/css/jquery.tagsinput.css')}">
         <link type="text/css" rel="stylesheet" href="${request.static_url('longitudinal_register:static/css/chosen.css')}">
         <link type="text/css" rel="stylesheet" href="${request.static_url('longitudinal_register:static/css/uniform.default.css')}">
-        <link rel="stylesheet" href="${request.static_url('longitudinal_register:static/css/timepicker.css')}">
         <link rel="stylesheet" href="${request.static_url('longitudinal_register:static/css/datepicker.css')}">
-        <link rel="stylesheet" href="${request.static_url('longitudinal_register:static/css/daterangepicker.css')}">
         <link rel="stylesheet" href="${request.static_url('longitudinal_register:static/css/bootstrap-toggle-buttons.css')}">
         <link type="text/css" rel="stylesheet" href="${request.static_url('longitudinal_register:static/css/calendar.css')}">
         
@@ -41,7 +39,6 @@
     <body>
         <!-- BEGIN WRAP -->
         <div id="wrap">
-
 
             <!-- BEGIN TOP BAR -->
             <div id="top">
@@ -144,25 +141,6 @@
 
             <!-- BEGIN LEFT  -->
             <div id="left">
-                <!-- .user-media -->
-                <div class="media user-media hidden-phone">
-                    <a href="" class="user-link">
-                        <img src="${request.static_url('longitudinal_register:static/img/user.gif')}" alt="" class="media-object img-polaroid user-img">
-                        <span class="label user-label">16</span>
-                    </a>
-
-                    <div class="media-body hidden-tablet">
-                        <h5 class="media-heading">Archie</h5>
-                        <ul class="unstyled user-info">
-                            <li><a href="">Administrator</a></li>
-                            <li>Last Access : <br/>
-                                <small><i class="icon-calendar"></i> 16 Mar 16:32</small>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- /.user-media -->
-
                 <!-- BEGIN MAIN NAVIGATION -->
                 <ul id="menu" class="unstyled accordion collapse in">
                     <li><a href="${request.route_path('patients_list_page')}"><i class="icon-user icon-large"></i> Patients</a></li>
@@ -256,39 +234,17 @@
                                     <div class="box">
                                         <header>
                                             <div class="icons"><i class="icon-tags"></i></div>
-                                            <h5>Todos</h5>
+                                            <h5>Latest Visits (${len(visits)})</h5>
                                         </header>
                                         <div class="block">
                                             <table class="table table-striped">
                                                 <tbody>
+                                                 % for visit in visits:
                                                     <tr>
-                                                        <td>sdg</td>
-                                                        <td>dsfg</td>
+                                                        <td>${visit.visit_date}</td>
+                                                        <td>${visit.person}</td>
                                                     </tr>
-                                                    <tr>
-                                                        <td>sdfg</td>
-                                                        <td>dfg</td>
-                                                    </tr>
-                                                    <tr class="success">
-                                                        <td>dsfg</td>
-                                                        <td>dfg</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>dfgh</td>
-                                                        <td>dfh</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>dfgh</td>
-                                                        <td>dfhg</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>ddfghdfgh</td>
-                                                        <td>dfh</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>dfh</td>
-                                                        <td>ddfhdh</td>
-                                                    </tr>
+                                                 % endfor
                                                 </tbody>
                                             </table>
                                         </div>
@@ -311,50 +267,22 @@
                                             <table class="table table-bordered table-condensed table-hovered sortableTable">
                                                 <thead>
                                                     <tr>
-                                                        <th>Country <i class="icon-sort"></i><i class="icon-sort-down"></i><i
+                                                        <th>Health Centre <i class="icon-sort"></i><i class="icon-sort-down"></i><i
                                                                 class="icon-sort-up"></i></th>
-                                                        <th>Visit <i class="icon-sort"></i><i class="icon-sort-down"></i><i
+                                                        <th>Person <i class="icon-sort"></i><i class="icon-sort-down"></i><i
                                                                 class="icon-sort-up"></i></th>
                                                         <th>Time <i class="icon-sort"></i><i class="icon-sort-down"></i><i
                                                                 class="icon-sort-up"></i></th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
+                                                 % for visit in visits:
                                                     <tr>
-                                                        <td>Andorra</td>
-                                                        <td>1126</td>
-                                                        <td>00:00:15</td>
+                                                        <td>${visit.health_unit}</td>
+                                                        <td>${visit.person}</td>
+                                                        <td>${visit.visit_date}</td>
                                                     </tr>
-                                                    <tr>
-                                                        <td>Belarus</td>
-                                                        <td>350</td>
-                                                        <td>00:01:20</td>
-                                                    </tr>
-                                                    <tr class="error">
-                                                        <td>Paraguay</td>
-                                                        <td>43</td>
-                                                        <td>00:00:30</td>
-                                                    </tr>
-                                                    <tr class="info">
-                                                        <td>Malta</td>
-                                                        <td>547</td>
-                                                        <td>00:10:20</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Australia</td>
-                                                        <td>560</td>
-                                                        <td>00:00:10</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Kenya</td>
-                                                        <td>97</td>
-                                                        <td>00:20:00</td>
-                                                    </tr>
-                                                    <tr class="success">
-                                                        <td>Italy</td>
-                                                        <td>2450</td>
-                                                        <td>00:10:00</td>
-                                                    </tr>
+                                                 % endfor
                                                 </tbody>
                                             </table>
                                         </div>
@@ -423,8 +351,9 @@
         <script src="${request.static_url('longitudinal_register:static/js/lib/chosen.jquery.min.js')}"></script>
         <script src="${request.static_url('longitudinal_register:static/js/lib/jquery.uniform.min.js')}"></script>
         <script src="${request.static_url('longitudinal_register:static/js/lib/jquery.validVal-4.3.2.js')}"></script>
-        <script src="${request.static_url('longitudinal_register:static/js/lib/date.js')}"></script>
-        <script src="${request.static_url('longitudinal_register:static/js/lib/daterangepicker.js')}"></script>
+        <script src="${request.static_url('longitudinal_register:static/js/lib/bootstrap-datepicker.js')}">
+          $('#dp3').datepicker();
+        </script>
         <script src="${request.static_url('longitudinal_register:static/js/lib/flot/jquery.flot.js')}"></script>
         <script src="${request.static_url('longitudinal_register:static/js/lib/flot/jquery.flot.pie.js')}"></script>
         <script src="${request.static_url('longitudinal_register:static/js/lib/flot/jquery.flot.selection.js')}"></script>
@@ -454,46 +383,5 @@
         
         <script type="text/javascript" src="${request.static_url('longitudinal_register:static/js/style-switcher.js')}"></script>
         
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </body>
 </html>
