Form Deletion possible

--- a/longitudinal_register/templates/forms/edit.html
+++ b/longitudinal_register/templates/forms/edit.html
@@ -58,7 +58,7 @@
                   <h5><i class="icon-th-large"></i> Concepts</h5>
 
                   <ul class="nav pull-right">
-                      <li><a href="#">Link</a></li>
+                      <li><a href="${request.route_url('form_delete', form_id=form_model.id)}">Delete Form</a></li>
                       <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="#"><i
                                   class="icon-th-large"></i></a>
                           <ul class="dropdown-menu">
