--- a/longitudinal_register/templates/patients/dashboard.html
+++ b/longitudinal_register/templates/patients/dashboard.html
@@ -42,12 +42,15 @@
                             <h4>Relations</h4>
                             % if person.relations:
                                % for relation in person.relations:
-                              <p>${relation.relative.surname}, ${relation.relative.other_names} [${relation.relationship_type.name}]</p>
+                              <p><a href="${request.route_path('patient_dashboard_page', health_id=relation.relative.health_id)}">
+                                ${relation.relative.surname}, ${relation.relative.other_names}</a> 
+                                [${relation.relationship_type.name}]
+                               </p>
                                % endfor
                             % endif
                             % if person.back_relations:
                                % for relation in person.back_relations:
-                              <p>${relation.back_relative.surname}, ${relation.back_relative.other_names} [${relation.relationship_type.name} of]</p>
+                              <p><a href="${request.route_path('patient_dashboard_page', health_id=relation.back_relative.health_id)}">${relation.back_relative.surname}, ${relation.back_relative.other_names} </a>[${relation.relationship_type.name} of]</p>
                                % endfor
                             % endif
                              <a href="${request.route_path('person_relations_list', person_a=person.id)}">Create Relationship</a>
